2016-09-25  Martin Pärtel <martin dot partel at gmail dot com>

	* Fix bug in readdir() introduced with 1.13.1. This fixes a bug when
	  a bindfs mount is exported over NFS (issue #39).
	* Released 1.13.2

2016-07-31  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --enable-ioctl to address issue #37.
	* Added --enable-lock-forwarding to address issue #36.

2016-05-03  Martin Pärtel <martin dot partel at gmail dot com>

	* @chenhaiq added --uid-offset and --gid-offset (PR #31). Thanks!

2016-02-17  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed an issue that some users had with reading large
	  directories (#28). Thanks to reporters!
	* Source directory now shown in /etc/mtab.
	* Fixed some test suite compatibility issues with Fedora. Thanks @tyll!
	* Rate limits are now expressed as 64-bit ints.
	* Released 1.13.1

2015-09-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Merged --resolve-symlinks by @hstern (#23). Thanks!
	* Implemented --resolved-symlink-deletion.
	* Released 1.13.0

2015-09-09  Martin Pärtel <martin dot partel at gmail dot com>

	* OS X xattr fixes prompted, assisted and tested by @retrography (#21).
	* Released 1.12.7

2014-06-30  Martin Pärtel <martin dot partel at gmail dot com>

	* Implemented rate limiter, an idea by @illuusio (#12).
	* Released 1.12.6

2014-06-11  Martin Pärtel <martin dot partel at gmail dot com>

	* Merged patch to fix GID cache by @alajovic. Thanks! This fixes a problem
	  with group membership checks and a potential crash.
	* Released 1.12.5

2014-06-05  Martin Pärtel <martin dot partel at gmail dot com>

	* Use `lutimes` when `utimensat` is unavailable, as it is on OS X (#6).
	* Copy nanoseconds with --ctime-from-mtime if struct stat.st_mtim etc. are
	  present (#16).
	* Released 1.12.4

2013-09-23  Martin Pärtel <martin dot partel at gmail dot com>

	* Use `utimensat` to support settings mtime/atime on symlinks,
	  and with nanosecond precision.